--- a/AutostartLoop/AutostartLoop.csproj
+++ b/AutostartLoop/AutostartLoop.csproj
@@ -2,9 +2,10 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net9.0-windows</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<UseWPF>True</UseWPF>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -13,6 +14,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="geforce-experience" Version="2.9.1.35" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-rc.1.24431.7" />
 	  <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
 	</ItemGroup>
