--- a/AutostartLoop/AutostartLoop.csproj
+++ b/AutostartLoop/AutostartLoop.csproj
@@ -2,21 +2,25 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0-windows</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<UseWPF>True</UseWPF>
-	</PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
 
-	<PropertyGroup>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+		<LangVersion>preview</LangVersion>
 		<DebugType>embedded</DebugType>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		
+		<PublishSingleFile>True</PublishSingleFile>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<PublishAot>False</PublishAot>
+		<PublishTrimmed>False</PublishTrimmed>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="geforce-experience" Version="2.9.1.35" />
-	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-rc.1.24431.7" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
 	  <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+
+	  <ProjectReference Include="..\Monitors.Shared\Monitors.Shared.csproj" />
 	</ItemGroup>
 
 	<Target Name="KillExistingInstances" BeforeTargets="Publish">
