--- a/AutostartLoop/AutostartLoop.csproj
+++ b/AutostartLoop/AutostartLoop.csproj
@@ -18,12 +18,11 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
-	  <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
 
 	  <ProjectReference Include="..\Monitors.Shared\Monitors.Shared.csproj" />
 	</ItemGroup>
 
-	<Target Name="KillExistingInstances" BeforeTargets="Publish">
+	<Target Name="KillInstances" BeforeTargets="PrepareForPublish">
 		<Exec Command="taskkill /f /im $(AssemblyName).exe" IgnoreExitCode="True" />
     </Target>
 
